<resources>
    <string name="app_name">aicar</string>


    <!--错误码列表-->
    <string name="errno_10001"> 获取微信服务器地址失败!</string>
    <string name="errno_12030">测试错误码2</string>


    <string name="app_zh_name">小车车</string>
    <string name="ad_text">开启4G之旅</string>

    <string name="main_activate_card">激活你的流量卡</string>
    <string name="main_activate_member">微信扫一扫二维码，成为aicar会员</string>
    <string name="main_activate_over">已完成激活</string>
    <string name="main_activate_false">暂不需要</string>
    <string name="main_sim_activate_title_1">你的小车车还有</string>
    <string name="main_sim_activate_title_2">天到期，过期后将无法享受上网服务，请及时充值哦！</string>
    <string name="main_sim_activate_recharge">充值</string>
    <string name="main_sim_activate_recharge_over">已充值</string>
    <string name="activate_succeed_titile">恭喜你激活成功</string>
    <string name="activate_succeed_sub_titile">您也可以在aicar应用内查看流量和进行充值</string>
    <string name="activate_succeed_know">知道了</string>
    <string name="activate_failure_titile">抱歉，你尚未激活成功</string>
    <string name="activate_failure_sub_titile">请在Aicar微信服务号进行激活，有任何疑问也可在服务号内咨询客服</string>
    <string name="activate_failure_restart">重新扫码</string>
    <string name="activate_failure_button_close">关闭</string>
    <string name="activate_succeed_no_sim">没有在您的设备发现sim卡</string>
    <string name="activate_succeed_sub_titile_no_sim">请检查aicar卡是否安装成功</string>
    <string name="activity_member_left_title">aicar</string>
    <string name="activity_member_left_setting">设置</string>
    <string name="buy_title">您的流量已用完</string>
    <string name="buy_sub_title">微信扫一扫，购买小车车会员流量套餐</string>
    <string name="fragment_buy_1">您的aicar流量还有</string>
    <string name="fragment_buy_2">天到期，请充值！</string>
    <string name="dialog_forced_updata_msg">有新的功能需要升级呦，一会安装就可以继续使用了！</string>

</resources>
