<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xcc.bustraffic.bustraffic.ui.activity.MainActivity">


    <TextView
        android:text="@string/main_activate_member"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <TextView
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activate_card"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/webwxgetmsgimg"
        android:id="@+id/imageView3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/main_activate_over"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_marginRight="72dp"
        android:layout_marginEnd="72dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3" />

    <Button
        android:text="@string/main_activate_false"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_marginLeft="74dp"
        android:layout_marginStart="74dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3" />

</RelativeLayout>
